--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,147 @@
-*{
+/* Basic styles*/
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+:root {
+  --primaryColor: rgb(23, 157, 18);
+  --mainWhite: #fff;
+  --offWhite: #f7f7f7;
+  --mainBlack: #222;
+  --mainGrey: #ececec;
+  --darkGrey: rgb(53, 53, 53);
+  --mainTransition: all 0.3s linear;
+  --mainSpacing: 3px;
+  --lightShadow: 2px 5px 3px 0px rgba(0, 0, 0, 0.5);
+  --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+h1 {
+  color: var(--mainWhite);
+  -webkit-text-stroke: 3px black;
+  font-size: 60px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: 900;
+}
+
+h3 {
+  color: var(--mainWhite);
+}
+
+p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 66px;
+  background-color: var(--darkGrey);
+  z-index: 1;
+}
+
+.background {
+  height: 100vh;
+  width: 100vw;
+  background-image: url("./images/background.png");
+  z-index: -1;
+}
+
+.hero {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 50px;
+  left: 0;
+  background-image: url("./images/hero.jpeg");
+  background-repeat: no-repeat;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.displayFlex {
+  display: flex;
+  justify-content: center;
+}
+
+.alignCenter {
+  align-items: center;
+}
+
+.flexColumn {
+  flex-direction: column;
+}
+
+.searchBar {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.searchIcon {
+  color: #747474;
+  font-size: 17px;
+  margin-top: 3px;
+}
+
+.searchBarBcg {
+  height: 100px;
+  width: 350px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  border-radius: 50px;
+}
+
+#searchQueryInput {
+  width: 100%;
+  height: 2.8rem;
+  background: var(--offWhite);
+  outline: none;
+  border: none;
+  border-radius: 1.625rem;
+  padding: 0 3.5rem 0 1.5rem;
+  font-size: 1rem;
+}
+
+#searchQuerySubmit {
+  width: 3.5rem;
+  height: 2.8rem;
+  margin-left: -3.5rem;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+#searchQuerySubmit:hover {
+  cursor: pointer;
+}
+
+.titleBcg {
+  height: 180px;
+  width: 700px;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  border-radius: 1.625rem;
+}
+
+.positionFixedTitle {
+  position: absolute;
+  top: 20vh;
+  left: 27vw;
+}
+
+@media only screen and (min-width: 421px) and (max-width: 800px) {
+  body {
+    height: 100vh;
+  }
 }
