--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ p {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 66px;
   background-color: var(--darkGrey);
   z-index: 1;
@@ -57,10 +57,10 @@ p {
 }
 
 .hero {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   position: fixed;
-  top: 50px;
+  top: 0;
   left: 0;
   background-image: url("./images/hero.jpeg");
   background-repeat: no-repeat;
@@ -88,6 +88,7 @@ p {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 
 .searchIcon {
@@ -136,8 +137,33 @@ p {
 
 .positionFixedTitle {
   position: absolute;
-  top: 20vh;
-  left: 27vw;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 420px) {
+  h1 {
+    -webkit-text-stroke: 1px black;
+    font-size: 27px;
+    margin-top: 20px;
+  }
+  .titleBcg {
+    height: 110px;
+    width: 300px;
+  }
+  .searchBarBcg {
+    height: 60px;
+    width: 250px;
+  }
+  #searchQueryInput {
+    width: 90%;
+    height: 2.1rem;
+    font-size: 0.8rem;
+  }
+  .positionFixedTitle {
+    top: 32%;
+  }
 }
 
 @media only screen and (min-width: 421px) and (max-width: 800px) {
