--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: KaushanScript-Regular, cursive;
 }
 
 :root {
@@ -19,6 +19,18 @@
   --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
+@font-face {
+  font-family: 'KaushanScript-Regular';
+  src: url("./fonts/KaushanScript-Regular.ttf") format("ttf");
+}
+
+body {
+  background-image: url("./images/background.png");
+  min-height: 100vh;
+  background-repeat: repeat;
+  background-attachment: scroll;
+}
+
 h1 {
   color: var(--mainWhite);
   -webkit-text-stroke: 3px black;
@@ -28,15 +40,71 @@ h1 {
   font-weight: 900;
 }
 
+h2 {
+  color: var(--mainWhite);
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+
 h3 {
   color: var(--mainWhite);
+  text-align: center;
+  font-size: 20px;
 }
 
 p {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--mainBlack);
+}
+
+li {
+  margin-top: 5px;
+  font-size: 19px;
+  padding-bottom: 5px;
+}
+
+ol {
+  padding: 30px;
+  width: 37vw;
+  text-align: justify;
+  list-style-position: inside;
+  line-height: 35px;
+}
+
+ul {
+  width: 30vw;
+  margin-bottom: 30px;
+}
+
+ol > li {
+  padding-bottom: 15px;
+}
+
+.customCounter {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.customCounter li {
+  counter-increment: step-counter;
+  margin-bottom: 10px;
+}
+
+.customCounter li::before {
+  content: counter(step-counter);
+  margin-right: 7px;
+  font-size: 80%;
+  background-color: slategrey;
   color: white;
+  font-weight: bold;
+  padding: 3px 8px;
+  border-radius: 3px;
+  line-height: 30px;
 }
 
 .navbar {
@@ -47,13 +115,8 @@ p {
   height: 66px;
   background-color: var(--darkGrey);
   z-index: 1;
-}
-
-.background {
-  height: 100vh;
-  width: 100vw;
-  background-image: url("./images/background.png");
-  z-index: -1;
+  display: flex;
+  align-items: center;
 }
 
 .hero {
@@ -83,6 +146,22 @@ p {
   flex-direction: column;
 }
 
+.logo {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 10px;
+}
+
+.logoImg {
+  height: 50px;
+  border-radius: 25%;
+}
+
+.noUnderline {
+  text-decoration-color: transparent;
+}
+
 .searchBar {
   width: 100%;
   display: flex;
@@ -95,6 +174,9 @@ p {
   color: #747474;
   font-size: 17px;
   margin-top: 3px;
+  z-index: 1;
+  position: relative;
+  top: 1.5rem;
 }
 
 .searchBarBcg {
@@ -102,10 +184,11 @@ p {
   width: 350px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   border-radius: 50px;
+  display: block;
 }
 
 #searchQueryInput {
-  width: 100%;
+  width: 82%;
   height: 2.8rem;
   background: var(--offWhite);
   outline: none;
@@ -113,6 +196,8 @@ p {
   border-radius: 1.625rem;
   padding: 0 3.5rem 0 1.5rem;
   font-size: 1rem;
+  position: relative;
+  top: 1.5rem;
 }
 
 #searchQuerySubmit {
@@ -142,11 +227,122 @@ p {
   transform: translate(-50%, -50%);
 }
 
+.recipeDiv {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: 450px 450px;
+  margin-top: 100px;
+}
+
+.imagePreview {
+  height: 180px;
+  width: 230px;
+  border-radius: 35px;
+  object-fit: cover;
+}
+
+.recipeCard {
+  background: var(--darkGrey);
+  height: 300px;
+  width: 365px;
+  margin-bottom: 70px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 50px;
+}
+
+.recipeCard:hover {
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8));
+}
+
+.recipeCard:hover h3 {
+  color: black;
+}
+
+.divWrapper {
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  position: relative;
+  width: 50vw;
+  top: 15vh;
+  left: 50%;
+  transform: translate(-50%, 0px);
+  border-radius: 25px;
+}
+
+.recipeContainer {
+  background-color: var(--mainWhite);
+  font-size: 14px;
+  margin: 30px;
+  width: -webkit-fill-available;
+  padding: 35px;
+  color: var(--mainBlack);
+  border-radius: 25px;
+}
+
+.recipeTitle {
+  color: var(--darkGrey);
+  margin-left: 0;
+  font-size: 30px;
+  text-align: center;
+  text-align: center;
+  border-bottom: solid 4px var(--darkGrey);
+  padding-bottom: 20px;
+  padding-top: 15px;
+}
+
+.subtitle {
+  color: var(--mainBlack);
+  text-align: center;
+  font-size: 20px;
+  border-bottom: 2px solid var(--darkGrey);
+  padding: 2px;
+  margin-bottom: 30px;
+}
+
+.recipeImg {
+  width: 37vw;
+  border-radius: 25px;
+  margin-top: 60px;
+  margin-bottom: 50px;
+}
+
+.contentMargin {
+  margin-bottom: 30px;
+}
+
 @media only screen and (max-width: 420px) {
   h1 {
     -webkit-text-stroke: 1px black;
-    font-size: 8.5vw;
+    font-size: 9.5vw;
     margin-top: 20px;
+  }
+  h2 {
+    font-size: 13px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  ol {
+    padding: 0;
+    width: 70vw;
+    line-height: 30px;
+    margin-top: 35px;
+  }
+  ul {
+    width: 60vw;
+  }
+  li {
+    font-size: 15px;
+  }
+  .navbar {
+    position: sticky;
+  }
+  .hero {
+    height: 120%;
   }
   .titleBcg {
     height: 17vh;
@@ -156,18 +352,141 @@ p {
     height: 60px;
     width: 75vw;
   }
+  .searchIcon {
+    font-size: 15px;
+    top: 0.4rem;
+  }
   #searchQueryInput {
-    width: 90%;
+    width: 84%;
     height: 2.1rem;
     font-size: 0.8rem;
+    top: 0.4rem;
   }
   .positionFixedTitle {
     top: 32%;
   }
+  .recipeDiv {
+    display: grid;
+    grid-template-columns: none;
+    margin-top: 20px;
+  }
+  .imagePreview {
+    border-radius: 15%;
+    height: 130px;
+    width: 180px;
+  }
+  .recipeCard {
+    height: 225px;
+    width: 280px;
+    margin-top: 35px;
+    margin-bottom: 10px;
+  }
+  .recipeImg {
+    width: 75vw;
+  }
+  .recipeContainer {
+    margin: 15px;
+  }
+  .divWrapper {
+    width: 98vw;
+    top: 5vh;
+  }
+  .recipeTitle {
+    font-size: 25px;
+    border-bottom: solid 3px var(--darkGrey);
+    padding-top: 0;
+  }
+  .subtitle {
+    font-size: 22px;
+  }
 }
 
 @media only screen and (min-width: 421px) and (max-width: 800px) {
-  body {
-    height: 100vh;
+  h1 {
+    -webkit-text-stroke: 2px black;
+    font-size: 7vw;
+    margin-top: 20px;
+  }
+  h2 {
+    font-size: 13px;
+  }
+  h3 {
+    font-size: 18px;
+  }
+  ol {
+    padding: 0;
+    width: 70vw;
+    line-height: 35px;
+    margin-top: 35px;
+  }
+  ul {
+    width: 60vw;
+  }
+  li {
+    font-size: 18px;
+  }
+  .navbar {
+    position: sticky;
+  }
+  .hero {
+    height: 120%;
+  }
+  .titleBcg {
+    height: 22vh;
+    width: 80vw;
+  }
+  .searchBarBcg {
+    height: 60px;
+    width: 55vw;
+  }
+  .searchIcon {
+    font-size: 15px;
+    top: 0.4rem;
+  }
+  #searchQueryInput {
+    width: 84%;
+    height: 2.1rem;
+    font-size: 0.95rem;
+    top: 0.4rem;
+  }
+  .positionFixedTitle {
+    top: 32%;
+  }
+  .recipeDiv {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 355px 355px;
+    margin-top: 45px;
+  }
+  .imagePreview {
+    border-radius: 25px;
+    height: 150px;
+  }
+  .recipeCard {
+    height: 275px;
+    width: 300px;
+    margin-top: 35px;
+    margin-bottom: 10px;
+  }
+  .recipeImg {
+    width: 65vw;
+  }
+  .recipeContainer {
+    margin: 25px;
+  }
+  .divWrapper {
+    width: 96vw;
+    top: 5vh;
+  }
+  .recipeTitle {
+    font-size: 30px;
+    border-bottom: solid 3px var(--darkGrey);
+    padding-top: 0;
+  }
+  .subtitle {
+    font-size: 30px;
+  }
+  .contentMargin {
+    margin-top: 35px;
   }
 }
