--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: KaushanScript-Regular, cursive;
 }
 
 :root {
@@ -20,6 +20,15 @@
   --darkShadow: 4px 10px 5px 0px rgba(0, 0, 0, 0.5);
 }
 
+@import"./styles/_fonts.scss";
+
+body  {
+  background-image: url("./images/background.png");
+  min-height: 100vh;
+  background-repeat: repeat;
+  background-attachment: scroll;
+}
+
 h1 {
   color: var(--mainWhite);
   -webkit-text-stroke: 3px black;
@@ -29,21 +38,80 @@ h1 {
   font-weight: 900;
 }
 
+h2 {
+    color: var(--mainWhite);
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+
 h3 {
   color: var(--mainWhite);
+  text-align: center;
+  font-size: 20px;
 }
 
 p {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: var(--mainBlack);
+}
+
+li {
+  margin-top: 5px;
+  font-size: 19px;
+  padding-bottom: 5px;
+}
+
+ol {
+  padding: 30px;
+  width: 37vw;
+  text-align: justify;
+  list-style-position: inside;
+  line-height: 35px;
+}
+
+ul {
+  width: 30vw;
+  margin-bottom: 30px;
+}
+
+ol > li {
+  padding-bottom: 15px;
+}
+
+.customCounter {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.customCounter li {
+  counter-increment: step-counter;
+  margin-bottom: 10px;
+}
+
+.customCounter li::before {
+  content: counter(step-counter);
+  margin-right: 7px;
+  font-size: 80%;
+  background-color: slategrey;
   color: white;
+  font-weight: bold;
+  padding: 3px 8px;
+  border-radius: 3px;
+  line-height: 30px;
 }
 
 
-@import "styles/globalStyles.scss";
-@import "styles/searchBar.scss";
-@import "styles/mainTitle.scss";
 
-@import "styles/mobileStyles.scss";
-@import "styles/tabletStyles.scss";
+@import "styles/_globalStyles.scss";
+@import "styles/_searchBar.scss";
+@import "styles/_mainTitle.scss";
+@import "styles/_recipeCardStyles.scss";
+@import "styles/_recipePage.scss";
+
+@import "styles/_mobileStyles.scss";
+@import "styles/_tabletStyles.scss";
