--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -10,6 +10,9 @@
   color: rgb(116, 116, 116);
   font-size: 17px;
   margin-top: 3px;
+  z-index: 1;
+  position: relative;
+  top: 1.5rem;
 }
 
 .searchBarBcg {
@@ -17,10 +20,11 @@
   width: 350px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
   border-radius: 50px;
+  display: block;
 }
 
 #searchQueryInput {
-  width: 100%;
+  width: 82%;
   height: 2.8rem;
   background: var(--offWhite);
   outline: none;
@@ -28,6 +32,8 @@
   border-radius: 1.625rem;
   padding: 0 3.5rem 0 1.5rem;
   font-size: 1rem;
+  position: relative;
+  top: 1.5rem;
 }
 
 #searchQuerySubmit {
