--- a/src/styles/_mobileStyles.scss
+++ b/src/styles/_mobileStyles.scss
@@ -26,6 +26,14 @@
     width: 60vw;
   }
 
+  ol > img {
+    width: 40vw;
+  }
+
+  ul > img {
+    width: 40vw;
+  }
+
   li {
     font-size: 15px;
   }
