--- a/src/styles/_tabletStyles.scss
+++ b/src/styles/_tabletStyles.scss
@@ -27,6 +27,14 @@
       width: 60vw;
     }
 
+    ol > img {
+      width: 20vw;
+    }
+
+    ul > img {
+      width: 20vw;
+    }
+
     li {
       font-size: 18px;
     }
